--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 </head>
 <header>
     <ul class="topnav">
-        <li><a class="active" href="home.php">Home</a></li>
+        <li><a class="active" href="index.php">Home</a></li>
         <li><a href="kalender.php">Kalender</a></li>
         <li><a href="contact.html">Contact</a></li>
         <li><a href="InlogRegister/login.php">Log in/uit</a></li>
